# pds-progetto

./: .gitignore  README.md  boost_install_wsl_clion.md
client/: CMakeLists.txt  conf.json  main.cpp
client/Configuration/: Configuration.cpp  Configuration.h  file_util.cpp  file_util.h  file_utils.cpp  file_utils.h
client/DirectoryStructure/: Directory.cpp  Directory.h  DirectoryEntry.h  File.cpp  File.h  utils.cpp  utils.h
client/FileWatcher/: watcher.cpp  watcher.h
client/communicationProtocol/: connection_utils.cpp  connection_utils.h  dataManagement.cpp  dataManagement.h  initialization.cpp  initialization.h  restore.cpp  restore.h
client/job/: Job.cpp  Job.h  JobQueue.cpp  JobQueue.h
common/: Action.h  Checksum.cpp  Checksum.h  fieldValidation.cpp  fieldValidation.h  job_utils.cpp  job_utils.h  time_utils.cpp  time_utils.h
common/cert/: server.cert.pem  server.pem
common/messages/: AuthenticationRequest.pb.cc  AuthenticationRequest.pb.h  AuthenticationRequest.proto  AuthenticationResponse.pb.cc  AuthenticationResponse.pb.h  AuthenticationResponse.proto  AvailableWorkspaces.pb.cc  AvailableWorkspaces.pb.h  AvailableWorkspaces.proto  DirectoryEntry.pb.cc  DirectoryEntry.pb.h  DirectoryEntry.proto  DirectoryEntryList.pb.cc  DirectoryEntryList.pb.h  DirectoryEntryList.proto  DirectoryEntryMessage.pb.cc  DirectoryEntryMessage.pb.h  DirectoryEntryMessage.proto  JobRequest.pb.cc  JobRequest.pb.h  JobRequest.proto  JobResponse.pb.cc  JobResponse.pb.h  JobResponse.proto  MachinePath.pb.cc  MachinePath.pb.h  MachinePath.proto  MetaInfo.pb.cc  MetaInfo.pb.h  MetaInfo.proto  RestoreResponse.pb.cc  RestoreResponse.pb.h  RestoreResponse.proto  Workspace.pb.cc  Workspace.pb.h  Workspace.proto  file_utils.cpp  file_utils.h  socket_utils.cpp  socket_utils.h  (+3 more)
guides/: protobuf_install.md  using_boost_test.md
server/: CMakeLists.txt  authentication.db  checksum_storage.db  main.cpp  main.cpp.orig  mapping.db
server/ChecksumStorage/: ChecksumStorage.cpp  ChecksumStorage.h
server/Workspace/: load.cpp  load.h  workspace_utils.cpp  workspace_utils.h
server/authentication/: authentication.cpp  authentication.db  authentication.h  authentication.txt
server/cert/: server.cert.pem  server.key.pem
server/db/: db_utils.cpp  db_utils.h
server/jobRequestQueue/: JobRequestQueue.cpp  JobRequestQueue.h  jobManager.cpp  jobManager.h
server/log/: log_utils.cpp  log_utils.h
server/pathPool/: PathPool.cpp  PathPool.h
server/waiter/: Waiter.cpp  Waiter.h
test/: authentication.cpp  authentication.db  checksum.cpp  job.cpp  jobqueue.cpp  main.cpp  workspace.cpp
test/authentication/: authentication.txt
test/utils/: filesystem.cpp  filesystem.h
